# BasicOfProgramming

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithm/: CMakeLists.txt
libs/algorithm/function__string/: function__string.c  function__string.h
libs/algorithm/function_files/: function_files.c  function_files.h
libs/algorithm/function_matrix/: function_matrix.c  function_matrix.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/Matrix/: matrix.c  matrix.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/vector/: vector.c  (+1 more)
test_files/: exam_task_test_1.txt  exam_task_test_1_result.txt  exam_task_test_2.txt  exam_task_test_2_result.txt  exam_task_test_3_cop.txt  task_10_f_test_1.txt  task_10_f_test_1_result.txt  task_10_f_test_2_cop.txt  task_10_f_test_2_result.txt  task_10_f_test_3_cop.txt  task_10_g_test_1.txt  task_10_g_test_2.txt  task_10_g_test_3.txt  task_1_test_1.txt  task_1_test_1_result.txt  task_1_test_2.txt  task_1_test_2_result.txt  task_1_test_3_cop.txt  task_1_test_3_result.txt  task_2_test_1.txt  task_2_test_1_result.txt  task_2_test_2.txt  task_3_test_1.txt  task_3_test_1_result.txt  task_3_test_2.txt  task_3_test_2_result.txt  task_3_test_3_cop.txt  task_3_test_3_result.txt  task_4_test_1.txt  task_4_test_1_result.txt  task_4_test_2_cop.txt  task_4_test_3_cop.txt  task_5_test_1.txt  task_5_test_1_result.txt  task_5_test_2_result.txt  task_6_test_1.txt  task_6_test_1_result.txt  task_6_test_2.txt  task_7_test_1_cop.txt  task_7_test_1_result.txt  (+10 more)
